--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaFinanciera
 excludes=
+file.reference.hsqldb-jdk8.jar=..\\..\\UTM\\caff\\hsqldb-2.6.1\\hsqldb\\lib\\hsqldb-jdk8.jar
+file.reference.hsqldb.jar=..\\..\\UTM\\caff\\hsqldb-2.6.1\\hsqldb\\lib\\hsqldb.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hsqldb-jdk8.jar}:\
+    ${file.reference.hsqldb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
