--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaFinanciera
 excludes=
 file.reference.hsqldb-jdk8.jar=..\\..\\UTM\\caff\\hsqldb-2.6.1\\hsqldb\\lib\\hsqldb-jdk8.jar
+file.reference.hsqldb-jdk8.jar-1=C:\\Users\\EDUARDO\\Downloads\\hsqldb-jdk8.jar
 file.reference.hsqldb.jar=..\\..\\UTM\\caff\\hsqldb-2.6.1\\hsqldb\\lib\\hsqldb.jar
+file.reference.hsqldb.jar-1=C:\\Users\\EDUARDO\\Downloads\\hsqldb.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.hsqldb-jdk8.jar}:\
-    ${file.reference.hsqldb.jar}
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.hsqldb-jdk8.jar-1}:\
+    ${file.reference.hsqldb.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
