--- a/server/BD.properties
+++ b/server/BD.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.1
-#Wed Jun 22 22:51:05 CDT 2022
-modified=yes
-tx_timestamp=3416
+#Thu Jun 23 10:28:39 CDT 2022
+tx_timestamp=3475
+modified=no
 version=2.6.1
