--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=SistemaFinanciera
+application.vendor=bran
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/SistemaFinanciera.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaFinanciera
+endorsed.classpath=
 excludes=
 file.reference.hsqldb-jdk8.jar=..\\..\\UTM\\caff\\hsqldb-2.6.1\\hsqldb\\lib\\hsqldb-jdk8.jar
 file.reference.hsqldb-jdk8.jar-1=C:\\Users\\EDUARDO\\Downloads\\hsqldb-jdk8.jar
@@ -79,7 +81,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=SistemaFinanciera
-main.class=sistemafinanciera.SistemaFinanciera
+main.class=Presentacion.Boundary.VentanaLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
